@@ -1,3 +1,9 @@
+Tue Jul 27 16:36:51 1999  Andrew Cagney  <cagney@amy.cygnus.com>
+
+	* interp.c (sim_store_register): Handle case where client - GDB -
+ 	specifies that a 4 byte register is 8 bytes in size.
+	(sim_fetch_register): Ditto.
+	
 1999-07-14  Frank Ch. Eigler  <fche@cygnus.com>
 
 	Implement "sim firmware" option, inspired by jimb's version of 1998-01.
